add: atualizar cadastro medico

--- a/src/main/resources/templates/medico/home.html
+++ b/src/main/resources/templates/medico/home.html
@@ -8,9 +8,9 @@
 <h2>Área do Médico</h2>
 
 <ul>
-    <li><a th:href="@{/medico/consultas}">Consultas Agendadas</a></li>
-    <li><a th:href="@{/medico/diagnosticos}">Diagnósticos</a></li>
-    <li><a th:href="@{/medico/editar}">Editar Perfil</a></li>
+    <li><a th:href="@{/medico/agendamento-consulta}">Agendamentos de Consultas</a></li>
+    <li><a th:href="@{/medico/diagnostico}">Diagnósticos</a></li>
+    <li><a th:href="@{/medico/editar-perfil}">Editar Perfil</a></li>
     <li><a th:href="@{/logout}">Sair</a></li>
 </ul>
 </body>
