--- a/src/main/resources/templates/medico/agendamento-consulta/detalhes-agendamento.html
+++ b/src/main/resources/templates/medico/agendamento-consulta/detalhes-agendamento.html
@@ -29,7 +29,7 @@
                     th:disabled="${agendamento.status == 'Confirmada'}">Confirmar</button>
         </form>
 
-        <form th:action="@{/medico/agendamento-consulta/{id}/reagendar(id=${agendamento.id})}" method="post" style="display:inline; margin-left:10px;">
+        <form th:action="@{/medico/agendamento-consulta/{id}/reagendar(id=${agendamento.id})}" method="get" style="display:inline; margin-left:10px;">
             <button type="submit"
                     th:disabled="${agendamento.status == 'Cancelada'}">Reagendar</button>
         </form>
