--- a/src/main/resources/templates/medico/home.html
+++ b/src/main/resources/templates/medico/home.html
@@ -8,8 +8,8 @@
 <h2>Área do Médico</h2>
 
 <ul>
-    <li><a th:href="@{/medico/agendamento-consulta}">Agendamentos de Consultas</a></li>
-    <li><a th:href="@{/medico/diagnostico}">Diagnósticos</a></li>
+    <li><a th:href="@{/medico/agendamento-consulta}">Agenda</a></li>
+    <li><a th:href="@{/medico/consulta}">Consultas</a></li>
     <li><a th:href="@{/medico/editar-perfil}">Editar Perfil</a></li>
     <li><a th:href="@{/logout}">Sair</a></li>
 </ul>
