--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -9,8 +9,7 @@
 
 <ul>
     <li><a th:href="@{/admin/usuarios}">Gerenciar Usuários</a></li>
-    <li><a th:href="@{/admin/consultas}">Visualizar Todas as Consultas</a></li>
-    <li><a th:href="@{/admin/relatorios}">Relatórios</a></li>
+    <li><a th:href="@{/admin/criar}">Criar admin</a></li>
     <li><a th:href="@{/logout}">Sair</a></li>
 </ul>
 </body>
