--- a/src/main/resources/templates/paciente/home.html
+++ b/src/main/resources/templates/paciente/home.html
@@ -22,7 +22,7 @@
 
         <ul class="action-list">
             <li><a th:href="@{/paciente/agendamento-consulta}"><i class="bi bi-calendar-plus-fill"></i> Agendar Nova Consulta</a></li>
-            <li><a th:href="@{/paciente/consultas}"><i class="bi bi-journal-text"></i> Minhas Consultas</a></li>
+            <li><a th:href="@{/paciente/consultas}"><i class="bi bi-journal-text"></i> Ver Minhas Consultas</a></li>
             <li><a th:href="@{/paciente/editar-perfil}"><i class="bi bi-person-fill-gear"></i> Editar Perfil</a></li>
             <li><a th:href="@{/logout}"><i class="bi bi-box-arrow-right"></i> Sair</a></li>
         </ul>
